# meme_bot

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: meme_fetch.yml
meme_bot/: .gitignore  main.py  pyproject.toml
meme_bot/BOT/: config.py  discord_sender.py
meme_bot/SCRAPER/: headers.py  latest_meme_info.py  latest_meme_link.py  packaged_meme.py
meme_bot/SCRAPER/STORAGE/: latest_meme_replacer.py  meme_duplication_checker.py  meme_storage.json
