[project]
name = "meme-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]
